--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
